force-app/main/default/objects/Task_Template_Step_Dependency__c/Task_Template_Step_Dependency__c.object-meta.xml
<CustomObject>
    <label>Task Template Step Dependency</label>
    <nameField>
        <displayFormat>StepDependency-{0000}</displayFormat>
        <label>Task Template Step Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Template Step Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>