force-app/main/default/objects/Task_Template_Step_Dependency__c/fields/Depends_On_Step__c.field-meta.xml
<CustomField>
    <fullName>Depends_On_Step__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Depends On Step</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Task_Template_Step__c.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.Step__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Task_Template_Step__c</referenceTo>
    <relationshipLabel>Task Template Step Dependencies (Depends On Step)</relationshipLabel>
    <relationshipName>Task_Template_Step_Dependencies1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>