force-app/main/default/objects/Task_Template_Step_Dependency__c/fields/Explain__c.field-meta.xml
<CustomField>
    <fullName>Explain__c</fullName>
    <formula>Depends_On_Step__r.Name &amp; &quot; must be completd before completing &quot; &amp; Depends_On_Step__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Explain</label>
    <type>Text</type>
</CustomField>