force-app/main/default/objects/Task_Template_Step_Dependency__c/fields/Master_Template__c.field-meta.xml
<CustomField>
    <fullName>Master_Template__c</fullName>
    <formula>Step__r.Template_Master__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Master</label>
    <type>Text</type>
</CustomField>