force-app/main/default/objects/Task_Template_Step_Dependency__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Step</label>
    <referenceTo>Task_Template_Step__c</referenceTo>
    <relationshipLabel>Task Template Step Dependencies</relationshipLabel>
    <relationshipName>Task_Template_Step_Dependencies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>