force-app/main/default/objects/Task_Template_Step_Dependency__c/fields/Task_Template__c.field-meta.xml
<CustomField>
    <fullName>Task_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Template</label>
    <referenceTo>Task_Template__c</referenceTo>
    <relationshipLabel>Task Template Step Dependencies</relationshipLabel>
    <relationshipName>Task_Template_Step_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>